--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="board">
-            <div class="square-box"></div>
+            <div class="square-box cross"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
