--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="board">
             <div class="square-box cross"></div>
-            <div class="square-box"></div>
+            <div class="square-box circle"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
