Make gameBoard, gameFlow and displayController modules

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <div class="board">
-            <div class="square-box cross"></div>
-            <div class="square-box circle"></div>
+            <div class="square-box"></div>
+            <div class="square-box"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
             <div class="square-box"></div>
