--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div class="square-box"></div>
             <div class="square-box"></div>
         </div>
+        <div class="endGame-popup">
+            <div class="game-message">WIN!</div>
+            <button class="restartButton">Restart</button>
+        </div>
     </main>
 </body>
 </html>
