Add another restart button when the game is being played

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="square-box"></div>
             <div class="square-box"></div>
         </div>
+        <button class="restartButton">Restart</button>
         <div class="endGame-popup">
             <div class="game-message">WIN!</div>
             <button class="restartButton">Restart</button>
